--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "@vis.gl/react-google-maps": "^1.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
-    "react": "^17.0.2",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
+    "typescript": "^5.7.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
